# plaid

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: CONTRIBUTING.md  ci.yml
src/: error.rs  lib.rs  lib_futures_01.rs  lib_futures_std.rs
src/types/: account.rs  auth.rs  institution.rs  item.rs  mod.rs  serde_utils.rs  token.rs  webhook.rs
