[package]
name = "plaid"
version = "0.1.1"
authors = ["William Myers <will@telco.in>"]
edition = "2018"
description = "Unofficial Rust client library for the Plaid API"
repository = "https://github.com/telcoin/plaid"
publish = false

[features]
default = ["futures-std", "rustls-tls"]

futures-std = ["reqwest"]
futures-01 = ["reqwest09", "futures01"]

native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures01 = { version = "0.1", package = "futures", optional = true }
reqwest = { version = "0.10", features = ["json", "gzip"], optional = true }
reqwest09 = { version = "0.9", package = "reqwest", optional = true }
secrecy = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
dotenv = "0.15.0"
once_cell = "1.4.1"
tokio = { version = "0.2", features = ["macros"] }
tokio01 = { version = "0.1", package = "tokio" }

[package.metadata.release]
no-dev-version = true
pre-release-commit-message = "chore: release v{{version}}"
tag-message = "{{crate_name}} v{{version}}"
pre-release-replacements = [
    { file = "README.md", search = 'tag = "v[a-z0-9\\.-]+"', replace = 'tag = "v{{version}}"' },
    { file = "CHANGELOG.md", search = 'Unreleased \(\d{4}-\d{2}-\d{2}\)', replace = "v{{version}} ({{date}})" },
]
