[package]
name = "plaid"
version = "0.6.0"
authors = ["William Myers <will@telco.in>"]
edition = "2018"
description = "Unofficial Rust client library for the Plaid API"
repository = "https://github.com/telcoin/plaid"
publish = false

[features]
default = ["rustls-tls"]

native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "gzip"] }
secrecy = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
dotenv = "0.15.0"
once_cell = "1.4.1"
tokio = { version = "1", features = ["macros"] }

[package.metadata.release]
no-dev-version = true
pre-release-commit-message = "chore: release v{{version}}"
tag-message = "{{crate_name}} v{{version}}"
pre-release-replacements = [
    { file = "README.md", search = 'tag = "v[a-z0-9\\.-]+"', replace = 'tag = "v{{version}}"', prerelease = true },
    { file = "CHANGELOG.md", search = '## \[Unreleased\].*', replace = "### [v{{version}}](https://github.com/telcoin/plaid/compare/v{{prev_version}}...v{{version}}) ({{date}})", min = 0, prerelease = true },
]
